--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/grupp
 spring.datasource.username=root
-spring.datasource.password=JIN23
+spring.datasource.password=Mohammed.123
 # Hibernate
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
